# compilers_lab

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  changelog.md  clean.sh  gradelab1.sh  gradelab2.sh  gradelab3.sh  gradelab4.sh  gradelab5&6.sh  gradelab5.sh  gradelab6.sh  handin.sh
lab1/: .gitignore  Dockerfile  gradelab2.sh  gradelab5.sh
lab1/src/straightline/: slp.cc  test_slp.cc
lab1/src/tiger/lex/: scanner.h
lab1/src/tiger/liveness/: flowgraph.h
lab1/src/tiger/main/: test_translate.cc
lab1/src/tiger/semant/: semant.cc
lab1/src/tiger/symbol/: symbol.h
lab1/src/tiger/translate/: translate.h
lab1/src/tiger/util/: graph.h
src/straightline/: main.cc  prog1.cc  prog1.h  slp.cc  slp.h
src/tiger/absyn/: absyn.cc  absyn.h
src/tiger/canon/: canon.cc  canon.h
src/tiger/codegen/: assem.cc  assem.h  codegen.cc  codegen.h
src/tiger/env/: env.h
src/tiger/errormsg/: errormsg.cc  errormsg.h
src/tiger/escape/: escape.cc  escape.h
src/tiger/frame/: frame.h  temp.cc  temp.h  x64frame.cc
src/tiger/lex/: scanner.h  tiger.lex
src/tiger/liveness/: flowgraph.cc  liveness.cc
src/tiger/main/: main.cc  test_lex.cc  test_parse.cc  test_semant.cc
src/tiger/parse/: parser.h  parser.ih  tiger.y
src/tiger/regalloc/: color.cc  color.h  regalloc.cc  regalloc.h
src/tiger/runtime/: runtime.c
src/tiger/semant/: semant.cc  semant.h  types.cc  types.h
src/tiger/translate/: printtree.cc  printtree.h  translate.cc  tree.cc  tree.h
src/tiger/util/: graph.h  table.h  util.h
testdata/lab3/refs/: merge.out  queens.out
tiger-compiler-lab1/src/straightline/: slp.h
tiger-compiler-lab1/src/tiger/absyn/: absyn.h
tiger-compiler-lab1/src/tiger/codegen/: assem.cc  assem.h
tiger-compiler-lab1/src/tiger/env/: env.cc
tiger-compiler-lab1/src/tiger/frame/: frame.h  x64frame.cc
tiger-compiler-lab1/src/tiger/liveness/: liveness.h
tiger-compiler-lab1/src/tiger/runtime/: runtime.c
tiger-compiler-lab1/src/tiger/symbol/: symbol.cc
